Added support for annonymous classes